# prokanota

./: .gitignore  .pre-commit-config.yaml  .snakemake-workflow-catalog.yml  CHANGELOG.md  MANIFEST.in  README.md  config  pyproject.toml  pytest.ini  setup.py  workflow
.github/workflows/: ci.yml  tests.yml
config/: README.md  config.yaml  databases.yaml  metadata.csv
config/schemas/: config.schema.json  databases.schema.json  metadata.schema.json
prokanota/: __init__.py  __main__.py  prokanota.CITATION
prokanota/config/: README.md  config.yaml  databases.yaml  metadata.csv  system_config.yaml  test-config.yaml
prokanota/config/schemas/: config.schema.json  databases.schema.json  metadata.schema.json
prokanota/tests/: databases.yaml  run_tests.py  test-config.yaml  test-databases.yaml  test-pyhmmer.yaml  test_mapping_utils.py  test_published_biological_truths.py
prokanota/tests/data/: Pfu_genome.fasta  Pfu_proteins.faa  build_test_dbs.sh
prokanota/tests/data/mockDB/: mockDB_profile_mapping.tsv  mockDB_seq_mapping.tsv
prokanota/tests/data/mockDB/blastp/: blastp_mockDB.phr  blastp_mockDB.pin  blastp_mockDB.pjs  blastp_mockDB.pos  (+1 more)
prokanota/workflow/: Snakefile
prokanota/workflow/envs/: diamond.yaml  environment.yaml  features.yaml  polars.yaml  polars_arm.yaml  pyhmmer.yaml  rpsblast.yaml
prokanota/workflow/rules/: parseSearchResults.smk  prepDBs.smk
prokanota/workflow/scripts/: __init__.py  diamond_parse.py  diamond_search.py  feature_utils.py  features.py  logging_utils.py  mapping_utils.py  merge_annotations.py  metadataFromDir.py  mmseqs2_parse.py  mmseqs2_search.py  prepareArCOGdb.py  pyhmmer_parse.py  pyhmmer_search.py  rpsblast_parse.py  rpsblast_search.py
tests/: metadata.csv  run_tests.py  test_mapping_utils.py
tests/data/pyhmmer/GTDBtk_r226_mockDB/: Pfam-A_mapping.tsv
tests/expected/annotation/Pyrococcus_furiosus_DSM_3638-GCF_008245085_protein/: Pyrococcus_furiosus_DSM_3638-GCF_008245085_protein_finalAnnotation.tsv
tests/expected/features/Pyrococcus_furiosus_DSM_3638-GCF_008245085/: Pyrococcus_furiosus_DSM_3638-GCF_008245085.fna  Pyrococcus_furiosus_DSM_3638-GCF_008245085.gbk  Pyrococcus_furiosus_DSM_3638-GCF_008245085.gff  Pyrococcus_furiosus_DSM_3638-GCF_008245085.tsv
tests/expected/features/Pyrococcus_furiosus_DSM_3638-GCF_008245085_protein/: Pyrococcus_furiosus_DSM_3638-GCF_008245085_protein.tsv
workflow/: Snakefile
workflow/envs/: cds.yaml  diamond.yaml  environment.yaml  features.yaml  mmseqs2.yaml  polars.yaml  pyhmmer.yaml
workflow/rules/: parseSearchResults.smk  prepDBs.smk  prepProteins.smk  searchDBs.smk
workflow/scripts/: cds.py  diamond_parse.py  diamond_search.py  feature_utils.py  features.py  logging_utils.py  mapping_utils.py  merge_annotations.py  mmseqs2_parse.py  mmseqs2_search.py  pyhmmer_parse.py  pyhmmer_search.py  rpsblast_parse.py  rpsblast_search.py
(+64 files in other folders)
